--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,8 @@ header {
 
 .fa-solid, .sobre-mim div h3, .section-projetos h3 {
     padding-bottom: 10px;
-    margin-top: 30px
+    margin-top: 30px;
+    font-size: 22px
 }
 
 /* text do sobre mim */
@@ -233,12 +234,37 @@ header {
     padding-left: 10px;
 }
 
+/* section contato */
+.section-contato {
+    margin: 50px auto;
+    text-align: center;
+    line-height: 25px;
+    font-family: "Lato" , "Sans-serif";
+    font-size: 18px;
+}
+
+.section-contato h2 {
+    margin: 70px 0px 30px;
+    font-size: 40px
+}
+
+.section-contato svg {
+    width: 40px;
+}
+
+.section-contato div {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+    margin-top: 50px
+}
+
 /* rodapé */
 footer {
     margin: 30px 0px 0px;
     text-align: center;
     background-color:#0993C5;
-    padding: 20px 0px
+    padding: 20px 0px;
 }
 
 footer span {
