--- a/css/style.css
+++ b/css/style.css
@@ -378,6 +378,7 @@ footer p {
     /* onde me apresento */
     .container-apresentacao h1 {
         font-size: 50px;
+        color: red;
     }
 
     .container-apresentacao h2 {
