--- a/css/style.css
+++ b/css/style.css
@@ -407,7 +407,7 @@ footer p {
     }
 
     .card-projeto .img-card-projeto img {
-        width: 50px;
+        width: 60vw;
     }
 
     .links-projeto {
