--- a/css/style.css
+++ b/css/style.css
@@ -398,8 +398,7 @@ footer p {
     /* cards dos projeto */
 
     .card-projeto {
-        padding: 10px;
-        width: 100px;
+        padding: 9px;
     }
 
     .secao-projetos {
@@ -409,6 +408,10 @@ footer p {
 
     .card-projeto .img-card-projeto img {
         width: 80px;
+        margin: 0 auto;
+        text-align: center;
+        justify-content: center;
+        align-items: center;
     }
 
     .links-projeto {
