--- a/css/style.css
+++ b/css/style.css
@@ -404,14 +404,12 @@ footer p {
     .secao-projetos {
         display: flex;
         align-items: center;
+        justify-content: center;
+        flex-wrap: wrap;
     }
 
     .card-projeto .img-card-projeto img {
         width: 80px;
-        margin: 0 auto;
-        text-align: center;
-        justify-content: center;
-        align-items: center;
     }
 
     .links-projeto {
