--- a/css/style.css
+++ b/css/style.css
@@ -413,6 +413,7 @@ footer p {
         display: flex;
         align-items: center;
         justify-content: center;
+        padding: 15px 22px;
     }
 
     footer a{
